tests/miniJava/neg/006173_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { String java = 0 ; } }
